sumo/tests/sumo/output/e3/errors/lane_false__entry/errors.sumo
Error: The lane with the id 'sss' is not known (while building detector '4/1to3/1').
Quitting (on error).
